jqbox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: jqbox
  namespace: default
spec:
  containers:
  - image: mcmattco/jqbox:latest
    command:
      - /bin/sh
      - "-c"
      - "sleep 60m"
    imagePullPolicy: IfNotPresent
    name: alpine
#    volumeMounts:
#      - name: workdir-volume
#        mountPath: /work-dir/
  restartPolicy: Always
#  volumes:
#    - name: workdir-volume
#      configMap:
#        name: workdir
#        defaultMode: 0777
