manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-alpha-deployment
  labels:
    app: nginx-alpha
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-alpha
  template:
    metadata:
      labels:
        app: nginx-alpha
    spec:
      containers:
      - name: nginx-alpha
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
          - name: defaultconf-volume
            mountPath: /etc/nginx/conf.d/
          - name: workdir-volume
            mountPath: /usr/share/nginx/html/
      volumes:
        - name: defaultconf-volume
          configMap:
            name: defaultconf
        - name: scriptdir-volume
          configMap:
            name: scriptdir
            defaultMode: 0777
        - name: workdir-volume
          emptyDir: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-beta-deployment
  labels:
    app: nginx-beta
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-beta
  template:
    metadata:
      labels:
        app: nginx-beta
    spec:
      containers:
      - name: nginx-beta
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
          - name: defaultconf-volume
            mountPath: /etc/nginx/conf.d/
          - name: workdir-volume
            mountPath: /usr/share/nginx/html/
      volumes:
        - name: defaultconf-volume
          configMap:
            name: defaultconf
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-alpha
spec:
  selector:
    app: nginx-alpha
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-beta
spec:
  selector:
    app: nginx-beta
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - alpha.mcmattco.com
    - beta.mcmattco.com
    secretName: nginx-tls
  rules:
  - host: alpha.mcmattco.com
    http:
      paths:
      - backend:
          serviceName: nginx-alpha
          servicePort: 80
  - host: beta.mcmattco.com
    http:
      paths:
      - backend:
          serviceName: nginx-beta
          servicePort: 80
